# rustwire

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  example.rs
.github/workflows/: publish.yml  semgrep.yml
benches/: read_11_bytes.rs  read_4k_bytes.rs  read_75_bytes.rs  write_replace_nested.rs
src/: decoders.rs  encoders.rs  lib.rs  tests.rs  utils.rs
